istio-mesh.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flask-app-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-app
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - flask-app-gateway
  http:
  - route:
    - destination:
        host: flask-app
        port:
          number: 5000
